[tool.poetry]
name = "hierarchical_data"
version = "0.1.0"
description = ""
authors = ["Jackson Nathaniel Detke <jndetke2150@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-mptt = "^0.11.0"

[tool.poetry.dev-dependencies]
django = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
